src/objects/JO_DateUtilFunctions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Date and Time Functions</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>JO DateUtilFunctions</label>
</CustomObject>